Fixed animal create action not showing errors

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -137,6 +137,7 @@ a:hover {
 } */
 
 footer {
+    background-color: #A9A9A9;
     position: fixed;
     left: 0;
     bottom: 0;
